<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormLogin"
    android:background="@color/blueb">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:src="@drawable/logoprincipal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_line"
        android:contentDescription="@string/toodo" />

    <View
        android:id="@+id/top_line"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@color/orangeb"
        android:layout_marginTop="0dp"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/bottom_line"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@color/orangeb"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <View
        android:id="@+id/container_principal"
        style="@style/ContainerComponents"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <EditText
        android:id="@+id/espaco_email"
        style="@style/Edit_Text"
        android:drawableEnd="@drawable/ic_email"
        android:hint="@string/email"
        app:layout_constraintStart_toStartOf="@id/container_principal"
        app:layout_constraintEnd_toEndOf="@id/container_principal"
        app:layout_constraintTop_toTopOf="@id/container_principal"
        android:clickable="true"
        android:focusable="true"
        android:autofillHints=""
        android:inputType="textEmailAddress"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/espaco_senha"
        style="@style/Edit_Text"
        android:drawableEnd="@drawable/ic_eye"
        android:hint="@string/senha"
        app:layout_constraintStart_toStartOf="@id/container_principal"
        app:layout_constraintEnd_toEndOf="@id/container_principal"
        app:layout_constraintTop_toBottomOf="@id/espaco_email"
        android:clickable="true"
        android:focusable="true"
        android:autofillHints=""
        android:inputType="text"
        tools:ignore="TextFields" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botao_login"
        style="@style/botao"
        android:text="@string/enviar"
        app:layout_constraintTop_toBottomOf="@id/espaco_senha"
        app:layout_constraintStart_toStartOf="@id/container_principal"
        app:layout_constraintEnd_toEndOf="@id/container_principal"
        android:layout_marginHorizontal="125dp"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:focusable="true" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botao_cadastro"
        style="@style/botao"
        android:text="@string/cadastrar"
        app:layout_constraintTop_toBottomOf="@id/botao_login"
        app:layout_constraintStart_toStartOf="@id/container_principal"
        app:layout_constraintEnd_toEndOf="@id/container_principal"
        android:layout_marginHorizontal="125dp"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:focusable="true" />


    <TextView
        android:id="@+id/marca_logo"
        app:layout_constraintBaseline_toBottomOf="@id/logo"
        android:layout_width="match_parent"
        android:text="@string/focuson"
        android:gravity="center"
        android:textColor="@color/orangeb"
        android:fontFamily="@font/fonteprincipal"
        android:textSize="75sp"
        android:paddingTop="2dp"
        android:layout_height="100dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>