<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormBemvindo"
    android:background="@color/blueb">

    <View
        android:id="@+id/linha_para_acima"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@color/orangeb"
        android:layout_marginTop="0dp"
        tools:ignore="MissingConstraints" />
    <ImageView
        android:id="@+id/logo_bemvindo"
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:src="@drawable/logoprincipal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linha_para_acima"
        android:contentDescription="@string/toodo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botao_para_login"
        style="@style/botao"
        android:text="@string/cadastrar"
        app:layout_constraintTop_toBottomOf="@id/logo_bemvindo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="40dp"
        android:layout_width="300dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botao_para_cadastro"
        style="@style/botao"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@id/botao_para_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="40dp"
        android:layout_width="300dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true" />



    <View
        android:id="@+id/linh_para_abaixo"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@color/orangeb"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/marca_logo"
        app:layout_constraintBaseline_toBottomOf="@id/logo_bemvindo"
        android:layout_width="match_parent"
        android:text="@string/focuson"
        android:gravity="center"
        android:textColor="@color/orangeb"
        android:fontFamily="@font/fonteprincipal"
        android:textSize="75sp"
        android:paddingTop="2dp"
        android:layout_height="100dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>